# ip-quality-checker

./: .gitignore  .upstream_sha  AUDIT_REPORT.json  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  sync-upstream.yml
src/: App.tsx  index.css  report.test.ts  report.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FactorSection.tsx  Header.tsx  IPInfoCard.tsx  IPOverview.tsx  LoadingSpinner.tsx  MailSection.tsx  MailStatus.tsx  RiskFactors.tsx  RiskScore.tsx  ScoreSection.tsx  StatusBar.tsx  StreamingSection.tsx  StreamingStatus.tsx
