[package]
name = "ip-quality-checker"
version = "0.1.0"
description = "IP Quality Checker - Tauri v2 App"
edition = "2021"

[package.metadata.android]
min_sdk_version = 24
target_sdk_version = 34

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
